[gd_scene load_steps=5 format=3 uid="uid://ndfsgckdjnlx"]

[ext_resource type="Script" uid="uid://cl48c2ecgford" path="res://views/tracks.gd" id="1_ikf7h"]
[ext_resource type="PackedScene" uid="uid://bbtcojfy2fotr" path="res://views/color_line.tscn" id="2_2wfir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikf7h"]
size = Vector2(1165, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oy45g"]
size = Vector2(1166, 20)

[node name="GameArea" type="Control" node_paths=PackedStringArray("color_lines")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ikf7h")
color_lines = [NodePath("JudgmentLineContainer/ColorLine1"), NodePath("JudgmentLineContainer/ColorLine2"), NodePath("JudgmentLineContainer/ColorLine3"), NodePath("JudgmentLineContainer/ColorLine4")]

[node name="TrackContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Track1" type="ColorRect" parent="TrackContainer"]
modulate = Color(1, 1, 1, 0.58431375)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.9019608, 0.4627451, 0.39607844, 1)

[node name="Track2" type="ColorRect" parent="TrackContainer"]
modulate = Color(1, 1, 1, 0.58431375)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.42352942, 0.8509804, 0.8509804, 1)

[node name="Track3" type="ColorRect" parent="TrackContainer"]
modulate = Color(1, 1, 1, 0.58431375)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.42352942, 0.8509804, 0.8509804, 1)

[node name="Track4" type="ColorRect" parent="TrackContainer"]
modulate = Color(1, 1, 1, 0.58431375)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.9019608, 0.4627451, 0.39607844, 1)

[node name="JudgmentLineContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorLine1" parent="JudgmentLineContainer" instance=ExtResource("2_2wfir")]

[node name="ColorLine2" parent="JudgmentLineContainer" instance=ExtResource("2_2wfir")]
line_index = 2

[node name="ColorLine3" parent="JudgmentLineContainer" instance=ExtResource("2_2wfir")]
line_index = 2

[node name="ColorLine4" parent="JudgmentLineContainer" instance=ExtResource("2_2wfir")]

[node name="JudgmentLine1" type="Area2D" parent="JudgmentLineContainer"]

[node name="CollisionShape2D1" type="CollisionShape2D" parent="JudgmentLineContainer/JudgmentLine1"]
position = Vector2(572.5, 0)
shape = SubResource("RectangleShape2D_ikf7h")

[node name="JudgmentLine2" type="Area2D" parent="JudgmentLineContainer"]
position = Vector2(0, 213)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="JudgmentLineContainer/JudgmentLine2"]
position = Vector2(573, 0)
shape = SubResource("RectangleShape2D_oy45g")
